[package]
name = "aahrp_2023_bbob_optimizations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
coco-rs = { path = "./coco/code-experiments/build/rust" }
log = "0.4.17"
env_logger = "0.10.0"
miette = { version = "5.7.0", features = ["fancy"] }
