[package]
name = "aahrp_2023_bbob_optimizations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
coco-rs = { path = "./coco/code-experiments/build/rust" }
log = "0.4.17"
env_logger = "0.10.0"
miette = { version = "5.7.0", features = ["fancy"] }
which = "4.4.0"
dunce = "1.0.4"
regex = "1.8.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
itertools = "0.10.5"
rayon = "1.7.0"
num = "0.4.0"

[[bin]]
name = "optimization_cli"
path = "./src/cli.rs"

[[bin]]
name = "validate_functions"
path = "./src/validate_functions.rs"
